fixing home page overflowing to left & right, moved all the index.html markups except the header, carousel, start & app sections, found issue in the app section, commented out all the app stylings in the medis.scss file, fixing the overflowing issue

--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,3 +1,5 @@
+
+
 // Header Starts
 #menu-header {
 
@@ -174,8 +176,12 @@
 // }
 
 .m-top{
-    margin-top: 100px;
+    margin-top: 97px;
 }
+
+// #main-area{
+//     will-change: transform;
+// }
 
 // Menu Section Starts
 #menu {
